projects/compiler/test/parser/for_error_no_in.out
Error at %FILE_NAME%:1:7
Unexpected token '[', expected 'in':
  |  for s ["a", "b"] { }
           ^